--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=2.0, user-scalable=1">
   <meta name="description" content="Software Engineer, London, UK">
   <title>Pablo Hidalgo</title>
-  <link rel="stylesheet" type="text/css" href="css/styles.css">
+  <link rel="stylesheet" type="text/css" href="styles.css">
   <link rel="shortcut icon" href="static/images/favicon.ico">
   <link href="https://fonts.googleapis.com/css?family=Libre+Baskerville:400,700|Nanum+Gothic:400,700&display=swap" rel="stylesheet">
   <script src="https://unpkg.com/scrollreveal"></script>
@@ -39,7 +39,7 @@
   </header>
   <main class="inner-container">
     <section class="hero">
-      <img class ="pablo" src="static/images/xuan.png" alt="Pablo photo" />
+      <img class ="pablo" src="" alt="Pablo photo" />
       <h1>Hi! I am <span>Pablo</span>, a Junior Programer.</h1>
     </section>
 
@@ -79,7 +79,7 @@
       <div class="project-link">
         <a name="projects"><h3 class="underline">Stocks Api</h3></a>
         <div>
-          <a href="https://github.com/Pablohv91/Stocks-api"><img src="images/github.svg" alt="github logo" class="link-logo images"/></a>
+          <a href="https://github.com/Pablohv91/Stocks-api"><img src="github.svg" alt="github logo" class="link-logo images"/></a>
         </div>
       </div>
       <p class="description">Python code which sends you an SMS with a relevant article to your phone when your stock raises.</p>
@@ -91,7 +91,7 @@
       <div class="project-link">
         <h3 class="underline">Snake Game</h3>
         <div>
-          <a href="https://github.com/Pablohv91/Snake-Game"><img src="images/github.svg" alt="github logo" class="link-logo"/></a>
+          <a href="https://github.com/Pablohv91/Snake-Game"><img src="github.svg" alt="github logo" class="link-logo"/></a>
         </div>
       </div>
       <p class="description">This was my more challanging proyect so far. Sobretodo con las coordenadas, aprendi a tener pacienza y descubri que hay muchas maneras de escribir el mismo codigo.</p>
@@ -114,7 +114,7 @@
       <div class="project-link">
         <h3 class="underline">Web page</h3>
         <div>
-          <a href="https://github.com/Pablohv91/Project-Web-JS"><img src="images/github.svg" alt="github logo" class="link-logo"/></a>
+          <a href="https://github.com/Pablohv91/Project-Web-JS"><img src="github.svg" alt="github logo" class="link-logo"/></a>
         </div>
       </div>
       <p class="description"> A web page for exercise my JavaScript, HTML, CSS knowledge.</p>
@@ -128,8 +128,8 @@
     <section class="cta-section border inner-container">
       <div class="inner-container">
         <a name="contact"><h1>Contact Me!</h1></a>
-        <a href="https://www.linkedin.com/in/pablo-hidalgo-ab018a142/"><img src="images/linkedin.svg" alt="linkedin logo" class="connect-logo" /></a>
-        <a href="https://github.com/Pablohv91"><img src="images/github.svg" alt="github logo" class="connect-logo"/></a>
+        <a href="https://www.linkedin.com/in/pablo-hidalgo-ab018a142/"><img src="linkedin.svg" alt="linkedin logo" class="connect-logo" /></a>
+        <a href="https://github.com/Pablohv91"><img src="github.svg" alt="github logo" class="connect-logo"/></a>
         <a class="btn" href="mailto:phdelavega@gmail.com">CONTACT ME</a>
         <div class="bottom-container"></div>
       </div>
